[gd_scene load_steps=4 format=3 uid="uid://l1wq5x5mdws1"]

[ext_resource type="Script" uid="uid://bvy5wadupvewv" path="res://src/scripts/menus/pop_up.gd" id="1_fgege"]
[ext_resource type="Theme" uid="uid://ch3x2byuiyaxy" path="res://src/assets/themes/menu.tres" id="2_8u6u7"]
[ext_resource type="FontFile" uid="uid://bhggoau4c0xk0" path="res://src/assets/fonts/Silver.ttf" id="3_8u6u7"]

[node name="Pop-up" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fgege")

[node name="BlackScreen" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.470588)

[node name="PopupPanel" type="Panel" parent="."]
texture_filter = 3
layout_mode = 1
anchors_preset = -1
anchor_left = 0.237
anchor_top = 0.198
anchor_right = 0.793
anchor_bottom = 0.812
offset_left = -0.0240173
offset_top = 397.696
offset_right = -242.536
offset_bottom = 640.824
grow_horizontal = 2
grow_vertical = 2
rotation = -1.5708
theme = ExtResource("2_8u6u7")

[node name="VBoxContainer" type="VBoxContainer" parent="PopupPanel"]
texture_filter = 3
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.502
offset_left = 117.0
offset_top = -261.499
offset_right = 643.0
offset_bottom = -52.7809
rotation = 1.5708

[node name="Title" type="Label" parent="PopupPanel/VBoxContainer"]
texture_filter = 3
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.34902)
theme_override_font_sizes/font_size = 60
text = "Title label"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Subtitle" type="Label" parent="PopupPanel/VBoxContainer"]
texture_filter = 3
custom_minimum_size = Vector2(0, 110)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_8u6u7")
theme_override_font_sizes/font_size = 47
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque eu imperdiet lectus."
horizontal_alignment = 1
autowrap_mode = 3

[node name="OkButton" type="Button" parent="PopupPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.232
anchor_top = 0.819
anchor_right = 0.232
anchor_bottom = 0.819
offset_left = 22.6622
offset_top = -23.9786
offset_right = 70.6621
offset_bottom = 21.0214
grow_horizontal = 2
rotation = 1.5708
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 35
text = "Ok!"

[connection signal="pressed" from="PopupPanel/OkButton" to="." method="_on_ok_button_pressed"]
